Blender 2.8 - Stereoscopy Convergence Plane broken #60328

Closed
opened 2019-01-08 18:22:32 +01:00 by Igor Petrovski · 6 comments

Blender Version
Broken: blender 2.80, 583c321334 (HEAD)
Worked: Blender 2.79b.

Short description of error
Stereoscopy convergence plan produces no effect on viewport.

Exact steps for others to reproduce the error
Open attached blend file. with Stereoscopy activated

Stereoscopy - Issue.blend

Stereoscopy - Convergence Plane Issue 01.png

Stereoscopy - Convergence Plane Issue 02.png

**Blender Version** Broken: blender 2.80, 583c3213347 (HEAD) Worked: Blender 2.79b. **Short description of error** Stereoscopy convergence plan produces no effect on viewport. **Exact steps for others to reproduce the error** Open attached blend file. with Stereoscopy activated [Stereoscopy - Issue.blend](https://archive.blender.org/developer/F6221907/Stereoscopy_-_Issue.blend) ![Stereoscopy - Convergence Plane Issue 01.png](https://archive.blender.org/developer/F6221909/Stereoscopy_-_Convergence_Plane_Issue_01.png) ![Stereoscopy - Convergence Plane Issue 02.png](https://archive.blender.org/developer/F6221914/Stereoscopy_-_Convergence_Plane_Issue_02.png)
Author

Added subscriber: @fladen

Added subscriber: @fladen

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2019-01-08 21:42:06 +01:00

Confirmed. The plane not drawing in the viewport is a known TODO. But it should still draw the individual cameras correctly.

Confirmed. The plane not drawing in the viewport is a known TODO. But it should still draw the individual cameras correctly.

For the records, rendering is correct, the only issue is viewport drawing.

For the records, rendering is correct, the only issue is viewport drawing.

This issue was referenced by 0bd20aa7df

This issue was referenced by 0bd20aa7df2ad7710f92e00d9dc72d826f16762a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60328
No description provided.